no errors in the console anymore

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="col mt-2 mb-1"><button class="sort btn btn-primary float-right">Sort</button></div>
         </div>
-        <div class="userRow row vh-100">
+        <div class="userRow row">
         </div>
 
         <section id="mapsection" class="vh-100">
